# python-wfconnect

./: LICENSE  README.md  pyproject.toml
src/wfconnect/: generate_wfconnect_abc.py  wfconnect.py  wfconnect_abc.py
