[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wfconnect"
version = "0.0.1"
authors = [
  { name="Tom Winkler", email="tom.winkler@webfleet.com" },
  { name="Fabian Henze", email="fabian.henze@webfleet.com" },
]
description = "A wrapper library to access WEBFLEET.connect API."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Webfleet-Solutions/python-wfconnect"
"Bug Tracker" = "https://github.com/Webfleet-Solutions/python-wfconnect/issues"
